--- a/css/theme/template/exposer.scss
+++ b/css/theme/template/exposer.scss
@@ -23,6 +23,7 @@
   --r-link-color: #{$linkColor};
   --r-link-color-dark: #{darken($linkColor , 15% )};
   --r-link-color-hover: #{$linkColorHover};
+  --r-li-color: #{$liColor};
   --r-selection-background-color: #{$selectionBackgroundColor};
   --r-selection-color: #{$selectionColor};
 }
