--- a/css/theme/template/theme.scss
+++ b/css/theme/template/theme.scss
@@ -60,6 +60,16 @@
 	word-wrap: break-word;
 }
 
+.reveal li {
+	font-family: sans-serif;
+  font-size: .8em;
+	color: var(--r-li-color);
+}
+
+.reveal ul {
+	padding-bottom: 25px;
+}
+
 .reveal h1 {font-size: var(--r-heading1-size); }
 .reveal h2 {font-size: var(--r-heading2-size); }
 .reveal h3 {font-size: var(--r-heading3-size); }
@@ -192,7 +202,7 @@
 	display: block;
 	padding: 5px;
 	overflow: auto;
-	max-height: 400px;
+	max-height: 800px;
 	word-wrap: normal;
 }
 
